--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -14,10 +14,9 @@
   <nav id="navbar">
     <div class="container-fluid nav-container">
       <a class="navbar-brand" href="index.html">El amigo del peregrino</a>
-      <a class="boton-tema" href="#">&#9789; Modo oscuro</a>
+      <a class="boton-tema" href="javascript:void(0)">&#9789; Modo oscuro</a>
       <ul id="nav-links">
-        <li><a href="index.html">Inicio</a></li>
-        <li class="nav-dropdown" id="dropdown">
+        <li class="nav-dropdown">
           <a href="#" id="dropbtn">Paradas</a>
           <div class="nav-dropdown-content">
             <a href="santiago.html">Santiago de Compostela</a>
@@ -28,10 +27,30 @@
           </div>
         </li>
         <li><a href="about.html">Sobre nosotros</a></li>
+        <li><div class="botones-sesion">
+          <a class="btn btn-secondary boton-iniciar-sesion" href="#">Iniciar sesión</a>
+          <a class="btn btn-primary boton-registrarse" href="#">Registrarse</a>
+        </div></li>
       </ul>
     </div>
   </nav>
   <div class="content">
+    <div id="login-container">
+      <form id="login-form">
+        <label for="email">Correo electrónico:</label>
+        <input type="email" id="login-email" required placeholder="Email">
+        <label for="password">Contraseña:</label>
+        <input type="password" id="login-password" required placeholder="Contraseña">
+        <div id="campos-registro">
+          <label for="password">Repite contraseña:</label>
+          <input type="password" id="login-password-repeat" required placeholder="Repite contraseña">
+          <label for="name">Nombre de usuario:</label>
+          <input type="text" id="login-name" required placeholder="Nombre de usuario">
+        </div>
+        <p id="error-login" style="display: none;"></p>
+      </form>
+      <div class="spacer"></div>
+    </div>
     <div class="info-general">
       <figure class="info-imagen">
         <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
@@ -105,7 +124,8 @@
     <p style="text-align: center;">Copyright &copy; 2023 - El amigo del peregrino</p>
   </footer>
   <script src="../js/jquery-3.6.4.min.js"></script>
-  <script src="../js/index.js"></script>
   <script src="../js/paradas.js"></script>
+  <script src="../js/sesion.js"></script>
+  <script src="../js/tema.js"></script>
 </body>
 </html>
