Arreglos de subpaginas, separar comentarios de index.js

--- a/pages/about.html
+++ b/pages/about.html
@@ -26,9 +26,11 @@
           </div>
         </li>
         <li><a href="about.html">Sobre nosotros</a></li>
+        <li><a id="nav-username" style="display: none;"></a></li>
         <li><div class="botones-sesion">
           <a class="btn btn-secondary boton-iniciar-sesion" href="#">Iniciar sesión</a>
           <a class="btn btn-primary boton-registrarse" href="#">Registrarse</a>
+          <a class="btn btn-secondary boton-cerrar-sesion" href="javascript:void(0)" style="display: none;">Cerrar sesión</a>
         </div></li>
       </ul>
     </div>
