--- a/pages/index.html
+++ b/pages/index.html
@@ -170,11 +170,11 @@
         <label for="comentario">Comentario:</label>
         <textarea id="comentario-comentario" name="comentario" placeholder="Deja aquí tu comentario"></textarea>
         <input type="button" id="boton-enviar-comentario" class="btn btn-primary" value="Enviar">
+        <p id="mensaje-comentarios" style="display: none;"></p>
       </form>
-      <p id="error-comentarios" style="display: none;"></p>
+      <div class="spacer"></div>
     </div>
   </div>
-  <div class="spacer"></div>
   <footer>
     <div class="social-links">
       <p>Síguenos en nuestras redes sociales</p>
@@ -187,9 +187,9 @@
     <p style="text-align: center;">Copyright &copy; 2023 - El amigo del peregrino</p>
   </footer>
   <script src="../js/jquery-3.6.4.min.js"></script>
-  <script src="../js/index.js"></script>
   <script src="../js/paradas.js"></script>
   <script src="../js/sesion.js"></script>
   <script src="../js/tema.js"></script>
+  <script src="../js/comentarios.js"></script>
 </body>
 </html>
