--- a/pages/index.html
+++ b/pages/index.html
@@ -60,7 +60,7 @@
     <div class="spacer"></div>
     <figure>
       <h2>Parada destacada: Burgos</h2>
-      <img src="../img/destacada.png" alt="Lugar destacado">
+      <img src="../img/index/destacada.png" alt="Lugar destacado">
     </figure>
     <div class="spacer"></div>
     <div class="sitios-parada">  
