Arreglillo imagen destacada y limpieza

--- a/pages/index.html
+++ b/pages/index.html
@@ -58,10 +58,12 @@
       <p>Los mejores lugares para visitar, comer y disfrutar de la ruta, en un mismo sitio</p>
     </div>
     <div class="spacer"></div>
-    <figure>
-      <h2>Parada destacada: Burgos</h2>
-      <img src="../img/index/destacada.png" alt="Lugar destacado">
-    </figure>
+    <div class="sitio-destacado">
+      <figure>
+        <h2>Parada destacada: Burgos</h2>
+        <a href="burgos.html"><img src="../img/index/destacada.png" alt="Lugar destacado"></a>
+      </figure>
+    </div>
     <div class="spacer"></div>
     <div class="sitios-parada">  
       <div class="container-fluid">
@@ -120,35 +122,6 @@
               <h6>Burgos</h6>
               <a><img src="../img/burgos/cooper.jpg" alt="Cooper Club (Burgos)"></a>
               <p>¿Buscas algo intermedio entre discoteca y pub? Cooper Club será tu sitio.</p>
-            </figure>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="spacer"></div>
-    <div class="opiniones">
-      <h2>Lee las opiniones de otros peregrinos</h2>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm">
-            <figure>
-              <h3>Opinión de Juan</h3>
-              <p>El camino francés es una experiencia inolvidable. La gente es muy amable y la comida es deliciosa. Recomiendo encarecidamente este camino.</p>
-              <a><img src="../img/opiniones/juan.jpg" alt="Opinión de Juan"></a>
-            </figure>
-          </div>
-          <div class="col-sm">
-            <figure>
-              <h3>Opinión de María</h3>
-              <p>El camino francés es una experiencia inolvidable. La gente es muy amable y la comida es deliciosa. Recomiendo encarecidamente este camino.</p>
-              <a><img src="../img/opiniones/maria.jpg" alt="Opinión de María"></a>
-            </figure>
-          </div>
-          <div class="col-sm">
-            <figure>
-              <h3>Opinión de Ana</h3>
-              <a><p>El camino francés es una experiencia inolvidable. La gente es muy amable y la comida es deliciosa. Recomiendo encarecidamente este camino.</p></a>
-              <img src="../img/opiniones/ana.jpg" alt="Opinión de Ana">
             </figure>
           </div>
         </div>
