--- a/pages/index.html
+++ b/pages/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="intro">
       <h1>Descubre el camino francés</h1>
-      <p>Los mejores lugares para visitar, comer y disfrutar de la ruta, en un mismo sitio</p>
+      <h5>Los mejores lugares para visitar, comer y disfrutar de la ruta, en un mismo sitio</h5>
     </div>
     <div class="spacer"></div>
     <div class="sitio-destacado">
@@ -90,7 +90,7 @@
               <h4>Oillarburu</h4>
               <h6>Saint-Jean-Pied-de-Port</h6>
               <a><img src="../img/saintjean/oillarburu.jpg" alt="Oillarburu (Saint-Jean-Pied-de-Port)"></a>
-              <p>Las mejores delicias de la cocina vasca en la primera parada del camino frances</p>
+              <p>Las mejores delicias de la cocina vasca en la primera parada del camino francés</p>
             </figure>
           </div>
         </div>
@@ -105,7 +105,7 @@
               <h4>Ruta</h4>
               <h6>Santiago</h6>
               <a><img src="../img/santiago/discoteca-ruta.jpeg" alt="Ruta (Santiago)"></a>
-              <p>En esta discoteca-pub te lo pasaras en grande con musica actual</p>  
+              <p>En esta discoteca-pub con ambiente joven te lo pasarás en grande con música actual</p>  
             </figure>
           </div>
           <div class="col-sm">
@@ -160,6 +160,7 @@
     <p style="text-align: center;">Copyright &copy; 2023 - El amigo del peregrino</p>
   </footer>
   <script src="../js/jquery-3.6.4.min.js"></script>
+  <script src="../js/index.js"></script>
   <script src="../js/paradas.js"></script>
   <script src="../js/sesion.js"></script>
   <script src="../js/tema.js"></script>
