--- a/pages/burgos.html
+++ b/pages/burgos.html
@@ -79,7 +79,7 @@
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">El Fogón De Jesusón</h5>
+              <h5>El Fogón De Jesusón</h5>
               <a><img src="../img/burgos/el-fogon-de-jesuson.webp" alt="El Fogón De Jesusón"></a>
               <p>Restaurante familiar de productos locales con un toque asiático.</p>
             </figure>
@@ -104,14 +104,14 @@
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Siete Setenta 7,70</h5>
+              <h5>Siete Setenta 7,70</h5>
               <a><img src="../img/burgos/siete-setenta.jpg" alt="Siete Setenta 7,70"></a>
               <p>Distoteca muy cuidada con esencia popera, toques indies y buen rollo.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Suit Drink</h5>
+              <h5>Suit Drink</h5>
               <a><img src="../img/burgos/suit-drink.jpg" alt="Suit Drink"></a>
               <p>Variedad de bebidas y cócteles de muy buena calidad. </p>
             </figure>
