--- a/pages/leon.html
+++ b/pages/leon.html
@@ -72,22 +72,22 @@
           <h3>Dónde Comer</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Carea Bistró</h5>
+              <h5>Carea Bistró</h5>
               <a><img src="../img/leon/carea-bistro.jpg" alt="Carea Bistró"></a>
               <p>Restaurante en un enclave único en pleno barrio Húmedo.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Rúa 11</h5>
+              <h5>Rúa 11</h5>
               <a><img src="../img/leon/rua-11.jpg" alt="Rúa 11"></a>
               <p>Tránsito de peregrinos y turistas, es una opción económica en tu camino.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Casa Mando</h5>
-              <a><img src="../img/leon/casa-mando.jpg" alt="Casa Mandoo"></a>
+              <h5>Casa Mando</h5>
+              <a><img src="../img/leon/casa-mando.jpg" alt="Casa Mando"></a>
               <p>Productos de la tierra de alta calidad.</p>
             </figure>
           </div>
@@ -97,21 +97,21 @@
           <h3>Vida nocturna</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Gabanna</h5>
+              <h5>Gabanna</h5>
               <a><img src="../img/leon/gabana.jpg" alt="Gabanna"></a>
               <p>Ideal para tomarse una cerveza en un buen ambiente.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">El Fuelle</h5>
+              <h5>El Fuelle</h5>
               <a><img src="../img/leon/el-fuelle.jpg" alt="El Fuelle"></a>
               <p>Una coctelería tranquila para disfrutar de una conversación y una copa.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Taxman Beatles Bar</h5>
+              <h5>Taxman Beatles Bar</h5>
               <a><img src="../img/leon/taxman-beatles-bar.jpeg" alt="Taxman Beatles Bar"></a>
               <p>Para los amantes de la cerveza artesana y la buena música.</p>
             </figure>
