--- a/pages/pamplona.html
+++ b/pages/pamplona.html
@@ -80,7 +80,7 @@
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">La Fogoneta Culibar</h5>
+              <h5>La Fogoneta Culibar</h5>
               <a><img src="../img/pamplona/la-fogoneta.jpg" alt="La Fogoneta Culibar"></a>
               <p>Pequeño bar-restaurante de platos típicos de la tierra en diferentes formatos.</p>
             </figure>
@@ -105,14 +105,14 @@
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Woodstock Pamplona</h5>
+              <h5>Woodstock Pamplona</h5>
               <a><img src="../img/pamplona/woodstock.jpg" alt="Woodstock Pamplona"></a>
               <p>Pub con una música buenísima tipo rock y de los 80.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Cervecería La Estafeta</h5>
+              <h5>Cervecería La Estafeta</h5>
               <a><img src="../img/pamplona/la-estafeta.jpg" alt="Cervecería La Estafeta"></a>
               <p>Bar en la calle típica de tapas para una gran noche. </p>
             </figure>
