--- a/pages/saint-jean-pied-de-port.html
+++ b/pages/saint-jean-pied-de-port.html
@@ -77,7 +77,7 @@
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Le Chat Perché</h5>
+              <h5>Le Chat Perché</h5>
               <a><img src="../img/saintjean/le-chat-perche.jpg" alt="Le Chat Perché"></a>
               <p>Servicio rápido, menú variado y especialidades locales.</p>
             </figure>
@@ -102,14 +102,14 @@
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Hôtel des Pyrénées</h5>
+              <h5>Hôtel des Pyrénées</h5>
               <a><img src="../img/saintjean/hotel-des-pyrenees.jpg" alt="Hôtel des Pyrénées"></a>
               <p>Sitio agradable donde amenizar tu noche con un cóctel.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Bar Snack Pausa</h5>
+              <h5>Bar Snack Pausa</h5>
               <a><img src="../img/saintjean/bar-snack-pausa.jpg" alt="Bar Snack Pausa"></a>
               <p>Bar de ambiente familiar donde tomar algo tranquilamente. </p>
             </figure>
