--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -73,21 +73,21 @@
           <h3>Dónde Comer</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">La Galiciana</h5>
+              <h5>La Galiciana</h5>
               <a><img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana"></a>
               <p>Disfruta de los mejores sabores santiagueses</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Pepa a Loba</h5>
+              <h5>Pepa a Loba</h5>
               <a><img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba"></a>
               <p>Situado en plena zona vella.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">O Rei do Bocadillo</h5>
+              <h5>O Rei do Bocadillo</h5>
               <a><img src="../img/santiago/o-rei-do-bocadillo.jpg" alt="O Rei do Bocadillo"></a>
               <p>Bocadillos caseros a muy buen precio. ¡No te lo pierdas!</p>
             </figure>
@@ -98,21 +98,21 @@
           <h3>Vida nocturna</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Ruta</h5>
+              <h5>Ruta</h5>
               <a><img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta"></a>
               <p>La mejor música de actualidad para pasarlo en grande.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Vanitas</h5>
+              <h5>Vanitas</h5>
               <a><img src="../img/santiago/vanitas.webp" alt="Discoteca Vanitas"></a>
               <p>Discoteca céntrica con un gran ambiente.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Pub Momo</h5>
+              <h5>Pub Momo</h5>
               <a><img src="../img/santiago/momo.jpg" alt="Pub Momo"></a>
               <p>Dardos, futbolín, billar... un pub de los de siempre!</p>
             </figure>
