--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Santiago de Compostela - El amigo del peregrino</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway Gothic One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway%20Gothic%20One">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/style-parada.css">
@@ -39,14 +39,14 @@
   <div id="login-container">
     <div class="spacer"></div>
     <form id="login-form">
-      <label for="email">Correo electrónico:</label>
+      <label for="login-email">Correo electrónico:</label>
       <input type="email" id="login-email" required placeholder="Email">
-      <label for="password">Contraseña:</label>
+      <label for="login-password">Contraseña:</label>
       <input type="password" id="login-password" required placeholder="Contraseña">
       <div id="campos-registro">
-        <label for="password">Repite contraseña:</label>
+        <label for="login-password">Repite contraseña:</label>
         <input type="password" id="login-password-repeat" required placeholder="Repite contraseña">
-        <label for="name">Nombre de usuario:</label>
+        <label for="login-name">Nombre de usuario:</label>
         <input type="text" id="login-name" required placeholder="Nombre de usuario">
       </div>
       <p id="error-login" style="display: none;"></p>
@@ -125,11 +125,11 @@
     <div id="comentarios">
       <h2>Déjanos un comentario</h2>
       <form id="formulario-comentarios">
-        <label for="name">Nombre:</label>
+        <label for="comentario-nombre">Nombre:</label>
         <input type="text" id="comentario-nombre" name="nombre" placeholder="Tu nombre">
-        <label for="email">Email:</label>
+        <label for="comentario-email">Email:</label>
         <input type="email" id="comentario-email" name="email" placeholder="Tu email">
-        <label for="comentario">Comentario:</label>
+        <label for="comentario-comentario">Comentario:</label>
         <textarea id="comentario-comentario" name="comentario" placeholder="Deja aquí tu comentario"></textarea>
         <input type="button" id="boton-enviar-comentario" class="btn btn-primary" value="Enviar">
         <p id="mensaje-comentarios" style="display: none;"></p>
