Actualizar todo.txt y typo

--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,7 @@
   <div id="content" style="text-align: center; margin-left: 30%; margin-right: 30%;">
     <h1>Sobre nosotros</h1>
     <hr>
-    <div id="sobre-nosotros">
+    <div id="que-es-esto">
       <h2>¿Qué es esto?</h2>
       <p>El amigo del peregrino es un proyecto que nace con la intención de ayudar a los peregrinos que se dirigen a Santiago de Compostela. 
         En esta página encontrarás información sobre las paradas más importantes del camino de Santiago, así como consejos y recomendaciones 
