--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway%20Gothic%20One">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
   <nav id="navbar">
     <div class="container-fluid nav-container">
-      <a class="navbar-brand" href="index.html">El amigo del peregrino</a>
+      <a class="navbar-brand" href=".">El amigo del peregrino</a>
       <a class="boton-tema" href="javascript:void(0)">&#9789; Modo oscuro</a>
       <ul id="nav-links">
         <li class="nav-dropdown">
           <a href="#" id="dropbtn">Paradas</a>
           <div class="nav-dropdown-content">
-            <a href="santiago.html">Santiago de Compostela</a>
-            <a href="leon.html">León</a>
-            <a href="burgos.html">Burgos</a>
-            <a href="pamplona.html">Pamplona</a>
-            <a href="saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a>
+            <a href="./pages/santiago.html">Santiago de Compostela</a>
+            <a href="./pages/leon.html">León</a>
+            <a href="./pages/burgos.html">Burgos</a>
+            <a href="./pages/pamplona.html">Pamplona</a>
+            <a href="./pages/saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a>
           </div>
         </li>
-        <li><a href="about.html">Sobre nosotros</a></li>
+        <li><a href="./pages/about.html">Sobre nosotros</a></li>
         <li><a id="nav-username" style="display: none;"></a></li>
         <li><div class="botones-sesion">
           <a class="btn btn-secondary boton-iniciar-sesion" href="#">Iniciar sesión</a>
@@ -61,7 +61,7 @@
     <div class="sitio-destacado">
       <figure>
         <h2>Parada destacada: Burgos</h2>
-        <a href="burgos.html"><img src="../img/index/destacada.png" alt="Lugar destacado"></a>
+        <a href="./pages/burgos.html"><img src="./img/index/destacada.png" alt="Lugar destacado"></a>
       </figure>
     </div>
     <div class="spacer"></div>
@@ -73,7 +73,7 @@
             <figure>
               <h4>Pepa a Loba</h4>
               <h6>Santiago</h6>
-              <a><img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba (Santiago)"></a>
+              <a><img src="./img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba (Santiago)"></a>
               <p>Este céntrico restaurante en la zona vieja de Santiago te embaucará con sus sabores</p>  
             </figure>
           </div>
@@ -81,7 +81,7 @@
             <figure>
               <h4>La Comtienda</h4>
               <h6>Burgos</h6>
-              <a><img src="../img/burgos/lacomtienda.jpg" alt="La Comtienda (Burgos)"></a>
+              <a><img src="./img/burgos/lacomtienda.jpg" alt="La Comtienda (Burgos)"></a>
               <p>Restaurante que aúna lo tradicional con una decoración moderna.</p>
             </figure>
           </div>
@@ -89,7 +89,7 @@
             <figure>
               <h4>Oillarburu</h4>
               <h6>Saint-Jean-Pied-de-Port</h6>
-              <a><img src="../img/saintjean/oillarburu.jpg" alt="Oillarburu (Saint-Jean-Pied-de-Port)"></a>
+              <a><img src="./img/saintjean/oillarburu.jpg" alt="Oillarburu (Saint-Jean-Pied-de-Port)"></a>
               <p>Las mejores delicias de la cocina vasca en la primera parada del camino francés</p>
             </figure>
           </div>
@@ -104,7 +104,7 @@
             <figure>
               <h4>Ruta</h4>
               <h6>Santiago</h6>
-              <a><img src="../img/santiago/discoteca-ruta.jpeg" alt="Ruta (Santiago)"></a>
+              <a><img src="./img/santiago/discoteca-ruta.jpeg" alt="Ruta (Santiago)"></a>
               <p>En esta discoteca-pub con ambiente joven te lo pasarás en grande con música actual</p>  
             </figure>
           </div>
@@ -112,7 +112,7 @@
             <figure>
               <h4>Gabanna</h4>
               <h6>León</h6>
-              <a><img src="../img/leon/gabana.jpg" alt="Gabanna (León)"></a>
+              <a><img src="./img/leon/gabana.jpg" alt="Gabanna (León)"></a>
               <p>Si ser joven te quedó atrás, esta discoteca de mediana edad puede ser ideal para ti</p>
             </figure>
           </div>
@@ -120,7 +120,7 @@
             <figure>
               <h4>Cooper Club</h4>
               <h6>Burgos</h6>
-              <a><img src="../img/burgos/cooper.jpg" alt="Cooper Club (Burgos)"></a>
+              <a><img src="./img/burgos/cooper.jpg" alt="Cooper Club (Burgos)"></a>
               <p>¿Buscas algo intermedio entre discoteca y pub? Cooper Club será tu sitio.</p>
             </figure>
           </div>
@@ -151,18 +151,18 @@
   <footer>
     <div class="social-links">
       <p>Síguenos en nuestras redes sociales</p>
-      <a href="https://www.instagram.com/" target="_blank"><img src="../img/social/instagram.png" alt="Instagram"></a>
-      <a href="https://www.twitter.com/" target="_blank"><img src="../img/social/twitter.png" alt="Twitter"></a>
-      <a href="https://www.facebook.com/" target="_blank"><img src="../img/social/facebook.png" alt="Facebook"></a>
-      <a href="https://www.tiktok.com/" target="_blank"><img src="../img/social/tiktok.png" alt="TikTok"></a>
+      <a href="https://www.instagram.com/" target="_blank"><img src="./img/social/instagram.png" alt="Instagram"></a>
+      <a href="https://www.twitter.com/" target="_blank"><img src="./img/social/twitter.png" alt="Twitter"></a>
+      <a href="https://www.facebook.com/" target="_blank"><img src="./img/social/facebook.png" alt="Facebook"></a>
+      <a href="https://www.tiktok.com/" target="_blank"><img src="./img/social/tiktok.png" alt="TikTok"></a>
     </div>
     <div class="spacer"></div>
     <p style="text-align: center;">Copyright &copy; 2023 - El amigo del peregrino</p>
   </footer>
-  <script src="../js/jquery-3.6.4.min.js"></script>
-  <script src="../js/paradas.js"></script>
-  <script src="../js/sesion.js"></script>
-  <script src="../js/tema.js"></script>
-  <script src="../js/comentarios.js"></script>
+  <script src="./js/jquery-3.6.4.min.js"></script>
+  <script src="./js/paradas.js"></script>
+  <script src="./js/sesion.js"></script>
+  <script src="./js/tema.js"></script>
+  <script src="./js/comentarios.js"></script>
 </body>
 </html>
