--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
 <body>
   <nav id="navbar">
     <div class="container-fluid nav-container">
-      <a class="navbar-brand" href="index.html">El amigo del peregrino</a>
+      <a class="navbar-brand" href="..">El amigo del peregrino</a>
       <a class="boton-tema" href="javascript:void(0)">&#9789; Modo oscuro</a>
       <ul id="nav-links">
         <li class="nav-dropdown">
